core/test/fixtures/invalid-gatherers/missing-pass.js
/**
 * @license
 * Copyright 2016 Google LLC
 * SPDX-License-Identifier: Apache-2.0
 */

class MissingPass {
  beforePass() {}
  afterPass() {}
}

export default MissingPass;
